test/cases/compile_errors/out_of_int_range_comptime_float_passed_to_intFromFloat.zig
export fn entry() void {
    const x: i8 = @intFromFloat(200);
    _ = x;
}

// error
// backend=stage2
// target=native
//
// :2:33: error: float value '200' cannot be stored in integer type 'i8'
